--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:Makt0112@localhost/todo_db
+DATABASE_URL=mysql://poteto1212:Makt0112@ip-172-17-3-84/poteto1212$todo_db
